--- a/index.html
+++ b/index.html
@@ -140,17 +140,7 @@
 	  }
 	  
 	  function CallApiMethod(method, token, value){
-		bridge.send("VKWebAppCallAPIMethod", {"method": method,
-			"params": 
-				{
-					"oath":"1",
-					"user_id": "1",
-					"activity_id": "2",
-					"value":value
-					"v":"5.131",
-				}
-		
-			});
+		bridge.send("VKWebAppCallAPIMethod", {"method": method, "params": {"oath":"1", "user_id": "1", "activity_id": "2", "value":value, "v":"5.131"}});
 	  }
 	  
     </script>
