--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	  }
 	  
 	  function CallApiMethod(method, token, value){
-		vkBridge.send("VKWebAppCallAPIMethod", {"method": method, "params": {"oath":"1", "access_token":token, "user_id": "1", "activity_id": "2", "value":value, "v":"5.131"}});
+		vkBridge.send("VKWebAppCallAPIMethod", {"method": method, "params": {"access_token":token, "user_id": "1", "activity_id": "2", "value":value, "v":"5.131"}});
 	  }
 	  
     </script>
