--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
 		vkBridge.send("VKWebAppCallAPIMethod", {"method": method, "params": {"access_token": token, "user_id": "1", "activity_id": "2", "value":value, "v":"5.131"}});
 	  }
 		
-	  function AddToMenu(method, settings){
-	  vkBridge.send("VKWebAppCallAPIMethod", { "method": method, "params": { "settings": settings }});
-	  }
-		
+	  function AddToMenu(){
+		vkBridge.send("VKWebAppAddToFavorites").then(data => {
+          console.log(data);
+		}
+	   }
     </script>
   </body>
 </html>
