--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		
 	  function AddToMenu(){
 		vkBridge.send("VKWebAppAddToFavorites").then(data => {
-          console.log(data);
+          console.log(data.result);
 			})
 	   }
 	   
