--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
 			})
 	   }
 	   
+	   function InviteFriends(){
+			vkBridge.send("VKWebAppShowInviteBox", {})
+         .then(data => console.log(data.success))  
+        .catch(error => console.log(error));
+	   }
+	   
     </script>
   </body>
 </html>
